Updated slider theme

--- a/style.css
+++ b/style.css
@@ -849,10 +849,23 @@ body {
 #cell	{clear:both; height:54px; position:relative;}
 
 /* YADWS */
-.yadws-slider {
+#content_wrapper .yadws-slider {
     background-color: #FFF;
 }
-.yadws-slider .yadws-slide {
+#content_wrapper .yadws-slider .yadws-navigation {
+    bottom: 14px;
+}
+#content_wrapper .yadws-slider .yadws-slide {
     padding: 12px;
     padding-right: 0;
+}
+#content_wrapper .yadws-slider .yadws-bullet {
+    width: 21px;
+    height: 24px;
+    background: url("./images/bs_nav_but.png") no-repeat;
+    border: 0;
+    margin: 1px;
+}
+#content_wrapper .yadws-slider .yadws-bullet.yadws_active{
+    background: url("./images/bs_nav_but_act.png") no-repeat;
 }
